repaired gap in .contact form form css

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -234,8 +234,8 @@ footer {
 
 .contact-form form {
     display: grid;
-    grid-template-columns: 160px 1fr;
-    gap: 15px 0px;
+    grid-template-columns: 90px 1fr;
+    gap: 15px 5px;
     align-items: start;
 }
 
